--- a/checkpoint-one/css/style.css
+++ b/checkpoint-one/css/style.css
@@ -1,41 +1,23 @@
-* {
+*{
   padding: 0;
   margin: 0;
   border: 0;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-nav.black {
-  background: black;
-  color: white;
-  text-align: center;
-  height: 55px;
-}
-p.black {
-  font-weight: bold;
-  padding: 20px;
-  letter-spacing: 2px;
-}
-nav.white {
-  height: 55px;
+header {
   width: 100%;
-  display: inline-block;
-  border-bottom: 2px solid black;
+} 
+
+nav.top {
+  height: 300px;
+  width: 100%;
+  background-image: url(http://www.rivercity-industries.com/wp-content/uploads/2018/02/tube-laser-header.jpg);
+
 }
-p.white {
-  /* font-weight: bold; */
-  letter-spacing: 1px;
-  float: left;
-  font-size: 20px;
-  margin-left: 10px;
-  
+img.top {
+  padding: 20px;
 }
-article {
+p.phone {
+  color: white;
   float: right;
-  
-}
-div.dropdown {
-  float: right;
-}
-.dropdown-content {
-  
+  padding: 20px;
 }
