--- a/04week/welcome-to-our-site/css/style.css
+++ b/04week/welcome-to-our-site/css/style.css
@@ -7,20 +7,33 @@
 header {
   background-color: #00d1c0;
   width: 100%;
-  height: 20%;
+  height: 250px;
+  /* display: inline-block; */
   color: white;
+  /* padding:0;
+  margin: 0; */
   display: flex;
-  justify-content: center;
+  align-content: center;
+  text-align: center;
+  /* justify-content: center;
+  overflow: hidden;
+  /* margin-bottom: 100px; */
 }
 p.header {
+  border: 2px solid red;
+  width: 100%;
+  /* height: 200px; */
+  display: flex;
+  justify-content: center;
   font-size: 130px;
   
 }
 p.header span {
   font-weight: bold;
+
 }
 main {
-  border: 2px solid pink;
+  /* border: 2px solid pink; */
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -32,7 +45,7 @@ main {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  border: 2px solid blue;
+  /* border: 2px solid blue; */
   padding: 10px;
   color: white;
   width: 100%;
