--- a/checkpoint-one/css/style.css
+++ b/checkpoint-one/css/style.css
@@ -1,1 +1,74 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
+main {
+  background-image: url(../images/hero-image1.jpg);
+  border: 1px solid red;
+  height: 100vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin: 0 auto;
+}
+.logo {
+  /* border: 1px solid red; */
+  display: flex;
+  margin: 200px auto;
+}
+.container1 {
+  border: 1px solid blue;
+  height: 50%;
+  background-image: url(../images/image-2.jpg);
+  background-size: 150%;
+  background-repeat: no-repeat;
+}
+.headline {
+  display: flex;
+  justify-content: left;
+  flex-wrap: wrap;
+  border: 1px solid orange;
+  height: 50%;
+  width: 600px;
+  margin-left: 80px;
+  margin-top: 100px;
+  display: inline-block;
+}
+.headline h1 {
+  color: rgb(255, 89, 0);
+  font-family: 'Source Sans Pro', sans-serif;
+  font: 300;
+  font-size: 50px;
+}
+.headline p {
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+}
+  .app-store img { 
+  border: 1px solid red; 
+  height: 30%;
+  margin-top: 20px;
+}
+.phones {
+ border: 1px solid red;
+ /* display: flex;
+ flex-wrap: wrap; */
+ float: right;
+ /* display: inline-block; */
+ margin-right:200px;
+ margin-top: -290px;
+ /* height: 300px; */
+}
+.what-we-do{
+  border: 1px solid black;
+  display: flex;
+  /* margin: 40px auto; */
+  width: 800px;
+  padding-left: 50px;
+  padding-top: 50px;
+}
+
+article {
+  height: 324px;
+  width: 270px;
