--- a/checkpoint-one/css/style.css
+++ b/checkpoint-one/css/style.css
@@ -163,11 +163,62 @@ p.greymiddle {
 button.greymiddle {
   background-color: yellow;
   color: black;
-  font-weight: bold;
+  font-weight: bolder;
   font-family: arial;
   width: 160px;
   height: 90%;
   font-size: 15px;
   align-self: center;
   font-stretch: condensed;
+}
+section {
+  height: 300px;
+  width: 100%;
+  background-color: black;
+  color: white;
+}
+.tab {
+  overflow: hidden;
+  /* border: 2px solid pink; */
+  margin-left: 100px;
+
+}
+.tab button {
+  color: white;
+  background-color: rgb(85, 82, 82);
+  border: none;
+  font-weight: bold;
+  height: 70px;
+  width: 150px;
+  font-size: 20px;
+
+}
+#london.tabcontent {
+  height: 300px;
+  color: white;
+  width: 100%;
+  background-color: rgb(85, 82, 82);
+  display: flex;
+  justify-content: center;
+}
+#london.tabcontent img {
+  padding: 50px;
+}
+#paris.tablecontent {
+  height: 300px;
+  color: white;
+  width: 100%;
+  background-color: rgb(85, 82, 82);
+  display: flex;
+  justify-content: center;
+}
+#bottom {
+ background-color: rgb(175, 171, 171);
+ padding: 20px;
+ display: flex;
+ justify-content: center;
+ height: 50px;
+}
+a.bottom:hover {
+  background-color: none
 }
