--- a/04week/welcome-to-our-site/css/style.css
+++ b/04week/welcome-to-our-site/css/style.css
@@ -20,7 +20,7 @@ header {
   /* margin-bottom: 100px; */
 }
 p.header {
-  border: 2px solid red;
+  /* border: 2px solid red; */
   width: 100%;
   /* height: 200px; */
   display: flex;
