--- a/checkpoint-one/css/style.css
+++ b/checkpoint-one/css/style.css
@@ -223,3 +223,182 @@ section {
 a.bottom:hover {
   background-color: none
 }
+@media(min-width: 576px) {
+  body {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+
+  }
+  #topgrey {
+    display: flex;
+    justify-content: center;
+  }
+  p.topgrey {
+    align-content: center;
+    margin-left: 0;
+  
+  }
+  nav.top {
+    width: 100%;
+  }
+  nav.links {
+    width: 100%;
+    display: flex;
+ 
+    
+  }
+  #links {
+    display: flex;
+    justify-content: center;
+    align-content: space-between;
+  }
+  a {
+    padding: 5px;
+    
+  }
+  a:hover {
+    background-color: rgba(211, 202, 202, 0.342);
+  }
+  ul.numbers {
+    margin-right: 50px;
+  }
+  ul.numbers li {
+    width: 20px;
+    height: 20px;
+    border: 1px solid white;
+    border-radius: 50%;
+    padding: 0
+  }
+  p.greymiddle {
+    font-size: 20px;
+    width: 70%;
+    padding: 0;
+  }
+  section {
+    width: 100%;
+    }
+    #London.tabcontent {
+      width: 100%;
+      height: 130px;
+      display: flex;
+      justify-content: center;
+    }
+    #London.tabcontent img {
+      width: 140px;
+      height: 120px;
+      z-index: 1;
+      padding: 5px;
+    }
+    #bottom {
+      height: 100px;
+      padding: 10px;
+    }
+  
+}
+@media(min-width: 768px) {
+  #bottom {
+    font-size: 15px;
+    text-align: end
+  }
+}
+@media(min-width: 414px) {
+  body {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+
+  }
+  #topgrey {
+    display: flex;
+    justify-content: center;
+  }
+  p.topgrey {
+    align-content: center;
+    margin-left: 0;
+    font-size: 15px;
+  
+  }
+  nav.top {
+    height: 200px;
+  }
+  img.top {
+    width: 130px;
+    height: 160px;
+    padding: 10px;
+  }
+  nav.top {
+    width: 100%;
+  }
+  nav.links {
+    width: 100%;
+    display: flex;
+ 
+    
+  }
+  #links {
+    display: flex;
+    justify-content: center;
+    align-content: space-between;
+  }
+  a {
+    padding: 5px;
+    
+  }
+  a:hover {
+    background-color: rgba(211, 202, 202, 0.342);
+  }
+  #left {
+    font-size: 30px;
+    padding: 0;
+  }
+  button.main {
+    height: 60px;
+    width: 100px;
+    font-size: 18px;
+    margin: 10px;
+  }
+  ul.numbers {
+    margin-right: 50px;
+  }
+  ul.numbers li {
+    width: 20px;
+    height: 20px;
+    border: 1px solid white;
+    border-radius: 50%;
+    padding: 0
+  }
+  p.greymiddle {
+    font-size: 20px;
+    width: 70%;
+    padding: 0;
+  }
+  section {
+    width: 100%;
+    }
+    .tab button {
+      width: 80px;
+      height: 50px;
+      font-size: 10px;
+    }
+    #London.tabcontent {
+      width: 100%;
+      height: 100px;
+      display: flex;
+      justify-content: center;
+    }
+    #London.tabcontent img {
+      width: 100px;
+      height: 80px;
+      z-index: 1;
+      padding: 5px;
+    }
+    #bottom {
+      height: 100px;
+      /* padding: 10px; */
+      font-size: 15px;
+    }
+  
+}
