--- a/checkpoint-one/css/style.css
+++ b/checkpoint-one/css/style.css
@@ -335,15 +335,17 @@ a.bottom:hover {
   nav.links {
     width: 100%;
     display: flex;
- 
+    height: 40px;
     
   }
   #links {
     display: flex;
     justify-content: center;
     align-content: space-between;
+    margin-top: 5px;
   }
   a {
+    font-size: 10px;
     padding: 5px;
     
   }
