--- a/checkpoint-one/css/style.css
+++ b/checkpoint-one/css/style.css
@@ -303,7 +303,7 @@ a.bottom:hover {
     text-align: end
   }
 }
-@media(min-width: 414px) {
+@media(min-width: 414px) and (max-width: 576px) {
   body {
     width: 100%;
     display: flex;
