--- a/checkpoint-one/css/style.css
+++ b/checkpoint-one/css/style.css
@@ -49,12 +49,15 @@ nav.links {
   display: flex;
   justify-content: center;
   
+  
 }
 a {
   border-right: 1px solid rgb(53, 52, 52);
-  padding: 10px;
+  padding: 20px;
   height: 100%;
   text-decoration: none;
+  margin: 10px 15px;
+  font-size: 20px;
   
 }
 
@@ -281,15 +284,15 @@ a.bottom:hover {
     }
     #London.tabcontent {
       width: 100%;
-      height: 130px;
+      height: 230px;
       display: flex;
       justify-content: center;
     }
     #London.tabcontent img {
-      width: 140px;
-      height: 120px;
+      width: 240px;
+      height: 220px;
       z-index: 1;
-      padding: 5px;
+      padding: 20px;
     }
     #bottom {
       height: 100px;
