created responsive  sites using media queries

--- a/04week/flexbox-exercises/css/style.css
+++ b/04week/flexbox-exercises/css/style.css
@@ -32,6 +32,12 @@ ul{
   list-style: none;
   width: 100%;
 }
+@media(mind-width: 480px){
+  ul{
+    flex-direction: column;
+  }
+}
+
 .listItem{
   border: 1px solid #eee;
   width: 100%;
