--- a/08week/tic-tac-toe/style.css
+++ b/08week/tic-tac-toe/style.css
@@ -1,9 +1,10 @@
-div[data-cell] {
+.row > div {
   width: 100px;
   height: 100px;
   background-color: #f2f2f2;
   float: left;
   border: 1px solid #808080;
+  font-family: 'Arial', sans-serif;
   font-size: 100px;
   text-align: center;
 }
@@ -15,4 +16,12 @@ div[data-cell] {
 #announce-winner {
   clear: both;
   font-size: 50px;
+}
+
+.fa-times {
+  color: blue;
+}
+
+.fa-circle-o {
+  color: red;
 }
