Tic tac toe - couild not get it to work

--- a/checkpoint-two/css/style.css
+++ b/checkpoint-two/css/style.css
@@ -23,6 +23,9 @@ h2 {
 .right {
     border-left: 2px dotted black;
 }
+
+/* ICONS ICONS ICONS ICONS ICONS */
+
 /* HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER */
 
 header {
@@ -176,6 +179,8 @@ header {
     text-decoration: none;
     list-style-type: none;
 }
+
+
 
 /* PROJECTS ------ PROJECTS ----- PROJECTS ------ PROJECTS ------ PROJECTS ----- PROJECTS */
 
