--- a/checkpoint-one/css/style.css
+++ b/checkpoint-one/css/style.css
@@ -5,7 +5,7 @@
 }
 
 main {
-  background-image: url(../images/hero-image1.jpg);
+  background-image: url(../images/hero-image3.jpg);
   border: 1px solid red;
   height: 100vh;
   background-size: cover;
@@ -19,56 +19,192 @@ main {
 }
 .container1 {
   border: 1px solid blue;
-  height: 50%;
-  background-image: url(../images/image-2.jpg);
-  background-size: 150%;
+  height: 70%;
+  background-image: url(../images/image-3.jpg);
+  background-size: 100%;
   background-repeat: no-repeat;
 }
 .headline {
   display: flex;
   justify-content: left;
   flex-wrap: wrap;
-  border: 1px solid orange;
-  height: 50%;
+  /* border: 1px solid orange; */
+  height: 40%;
   width: 600px;
-  margin-left: 80px;
-  margin-top: 100px;
+  margin-left: 100px;
+  margin-top: 80px;
   display: inline-block;
 }
 .headline h1 {
   color: rgb(255, 89, 0);
   font-family: 'Source Sans Pro', sans-serif;
-  font: 300;
+  font-weight: 700;
   font-size: 50px;
 }
 .headline p {
   color: white;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 200;
+  font-size: 30px;
 }
   .app-store img { 
-  border: 1px solid red; 
-  height: 30%;
+  /* border: 1px solid red;  */
+  height: 25%;
   margin-top: 20px;
 }
 .phones {
- border: 1px solid red;
+ /* border: 1px solid red; */
  /* display: flex;
  flex-wrap: wrap; */
  float: right;
  /* display: inline-block; */
  margin-right:200px;
- margin-top: -290px;
+ margin-top: -230px;
  /* height: 300px; */
 }
 .what-we-do{
-  border: 1px solid black;
+  /* border: 1px solid black; */
   display: flex;
-  /* margin: 40px auto; */
-  width: 800px;
+  margin-left: 70px;
+  /* margin-right: 50px; */
+  width: 90%;
   padding-left: 50px;
-  padding-top: 50px;
+  padding-right: 50px;
+  padding-top: 10px; 
+  justify-content: space-between;
+  align-self: center;
+  text-align: center;
 }
-
 article {
   height: 324px;
   width: 270px;
+}
+article h2 {
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 500; 
+  color: rgb(255, 89, 0);
+  
+}
+article p {
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 300; 
+  line-height: 26px;
+  padding-top: 10px;
+}
+article img {
+  padding-bottom: 20px;
+}
+
+.container3 {
+  /* border: 1px solid black; */
+  display: flex;
+  margin-left: 70px;
+  width: 90%;
+  height: 450px;
+  margin-top: 50px;
+  justify-content: center;
+  align-content: center;
+}
+section h3 {
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 700; 
+  padding-top: 100px;
+  font-size: 30px;
+  margin: 0 auto;
+  text-align: left;
+}
+.highlight {
+  color: rgb(255, 89, 0);
+}
+h3::after {
+  content: '';
+  width: 55px;
+  height: 1px;
+  /* margin: 30px auto 25px; */
+  display: block;
+  margin-top: 20px;
+  /* background-color: #c0c2c6; */
+}
+
+.sub-title {
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 300; 
+  font-size: 20px;
+}
+.shooting-test {
+  /* border: 1px solid salmon; */
+  transform: rotate(5deg);
+  /* height: 100%; */
+  margin-top: -650px;
+  /* width: 500px; */
+  position: absolute;
+  flex-direction: row;
+  margin-left: -200px; 
+}
+.middle-section {
+  margin-top: -300px;
+}
+.body-copy h4 {
+  /* border: 1px solid red; */
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 700; 
+  margin-left: 470px;
+  margin-right: 200px;
+  margin-top: 100px;
+  width: 300px;
+  /* height: 100px; */
+}
+.body-copy p {
+  /* border: 1px solid red; */
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 300; 
+  margin-left: 470px;
+  margin-right: 200px;
+  width: 300px;
+  margin-top: 10px;
+  /* margin-top: -200px; */
+  /* height: 200px; */
+}
+.body-copy2 h4 {
+  /* border: 1px solid red; */
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 700; 
+  margin-left: 470px;
+  margin-right: 200px;
+  margin-top: 50px;
+  width: 300px;
+  /* height: 100px; */
+}
+.body-copy2 p {
+  /* border: 1px solid red; */
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 300; 
+  margin-left: 470px;
+  margin-right: 200px;
+  width: 300px;
+  margin-top: 10px;
+  /* margin-top: -200px; */
+  /* height: 200px; */
+}
+iframe {
+  /* border: 1px solid red;  */
+  margin-top: 400px;
+  width: 100%; 
+}
+
+.container4 {
+  /* border: 1px solid blue; */
+  height: 40%;
+  background-size: 50%;
+  background-repeat: no-repeat;
+  margin-left: 5%;
+  margin-right: 50%;
+  margin-top: 5%;
+}
+.iphone-shot2 {
+  float: right;
+   /* border: 1px solid salmon; */
+   transform: rotate(-5deg);
+   /* height: 100%; */
+   margin-top: -400px;
+}
