--- a/04week/welcome-to-our-site/css/style.css
+++ b/04week/welcome-to-our-site/css/style.css
@@ -15,7 +15,7 @@ h1 {
   color: white;
 }
 .box1  {
-  border: 1px solid red;
+  /* border: 1px solid red; */
   height: 100%;
   width: 100%;
   background-color: black;
@@ -29,7 +29,7 @@ h1 {
 }
 
 .type-box1 {
-  border: 1px solid green;
+  /* border: 1px solid green; */
   width: 300px;
   height: 300px;
   padding-top:10px;
