--- a/05week/in-class-exercises/responsive-card/css/style.css
+++ b/05week/in-class-exercises/responsive-card/css/style.css
@@ -1,17 +1,17 @@
-@import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i,900,900i');
+@import url('https://fonts.googleapis.com/css?family=Noto+Serif+SC:400,700|Roboto:400,700');
 
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i');
-
-/* .border-1{
-  border: 2px solid red;
-}
-.border-2{
-  border: 2px solid blue;
-} */
+/* font-family: 'Roboto', sans-serif;
+font-family: 'Noto Serif SC', serif; */
 
 * {
   box-sizing: border-box;
 }
+/* .border-1 {
+  border:2px solid red;
+}
+.border-2 {
+  border:2px solid blue;
+} */
 
 body {
   display: flex;
@@ -23,71 +23,75 @@ body {
   margin: 0;
   padding: 0;
 }
-
 .card {
-  height: 90%;
-  width: 80%;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  height: 90%;
+  width: 80%;
   box-shadow: 1px 1px 16px 0px rgba(134, 134, 134, 0.1);
 }
 .card__content {
-  flex: 1;
   display: flex;
   flex-direction: column;
-  padding: 1em 2em 0;
+  flex: 1;
   order: 2;
+  padding: 1em 2em 0;
 }
 .card__content div {
   margin-bottom: 1.3em;
 }
 .card__content .subtitle {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Roboto', sans-serif;
   letter-spacing: 3px;
   font-size: 10px;
   text-transform: uppercase;
-  color: #7E7E7E;    
+  color: #7e7e7e;
   font-weight: 700;
 }
 .card__content .title {
-  font-family: 'Playfair Display', serif;
+  font-family: 'Noto Serif SC', serif;
   font-size: 30px;
-    line-height: 31px;
   letter-spacing: 3px;
+  line-height: 31px;
   font-weight: 700;
-  color: #2C2C2C;
+  color: #2c2c2c;
   margin-bottom: .5em;
 }
 .card__content .description {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 11px;
   color: #7e7e7e;
   line-height: 22px;
 }
 .card__content .link a {
+  font-family: 'Roboto', sans-serif;
   text-decoration: none;
-  color: #2C2C2C;
-  font-family: 'Open Sans', sans-serif;
+  color: #2c2c2c;
   letter-spacing: 3px;
   font-size: 9px;
   text-transform: uppercase;
   font-weight: 700;
 }
-.card__content .link a:hover {
-  color: #7E7E7E;
-}
 .card__image {
-  flex: 1;
   background: url('https://images.unsplash.com/photo-1544488994-3a0753185c37?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80');
   background-size: cover;
   background-repeat: no-repeat;
+  flex: 1;
   order: 1;
 }
 
 
+
+
+
+
+
 /* Small and up (Landscape Phones) */
 @media (min-width: 576px) {
+  .card__content {
+    padding: 2em;
+  }
   .card__content .description {
     line-height: 16px;
   }
@@ -99,33 +103,24 @@ body {
 /* Medium and up (Tablets) */
 @media (min-width: 768px) {
   .card {
-    height: 550px;
-    width: 90%;
     flex-direction: row;
   }
   .card__content {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    padding: 6em 2em 0;
     order: 1;
-  }
-  .card__content .title {
-    font-size: 44px;
-    line-height: 45px;
-    margin-bottom: 1em;
+    padding: 6em 2em 0;
   }
   .card__content .description {
-    font-size: 13px;
     line-height: 22px;
+    font-size: 13px;
   }
   .card__content .link a {
     font-size: 13px;
   }
   .card__image {
     order: 2;
-    flex: 2
+    flex: 2;
   }
+
 }
 
 /* Large and up (Desktops) */
@@ -133,9 +128,7 @@ body {
   .card {
     height: 550px;
     width: 900px;
-    flex-direction: row;
   }
-
 }
 
 /* Extra Large and up (Wide Screen Desktops) */
