--- a/09week/towers-of-hanoi/style.css
+++ b/09week/towers-of-hanoi/style.css
@@ -1,34 +1,42 @@
+body {
+  display: flex;
+  flex-direction: row;
+}
+
+
 [data-stack] {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-evenly;
+  flex-direction: column-reverse;
   align-items: center;
-  height: 101px;
+  padding-top: 200px;
+  width: 101px;
   background-color: aliceblue;
   margin: 25px;
 }
 
 [data-block] {
-  width: 25px;
+  height: 25px;
   float: left;
 }
 
 [data-block="25"] {
-  height: 25px;
+  width: 25px;
   background-color: blue;
 }
 
 [data-block="50"] {
-  height: 50px;
+  width: 50px;
   background-color: green;
 }
 
 [data-block="75"] {
-  height: 75px;
+  width: 75px;
   background-color: red;
 }
 
 [data-block="100"] {
-  height: 100px;
+  width: 100px;
   background-color: yellow;
 }
 
