--- a/09week/towers-of-hanoi/style.css
+++ b/09week/towers-of-hanoi/style.css
@@ -1,35 +1,47 @@
+
+.container {
+  display: inline-flex;
+}
+
 [data-stack] {
   display: flex;
+  flex-direction: column-reverse;
   justify-content: flex-start;
   align-items: center;
-  height: 101px;
-  background-color: aliceblue;
-  margin: 25px;
+  height: 400px;
+  width: 100px;
+  background-color: #e6e6e6;
+  margin: 0 50px;
 }
 
 [data-block] {
   width: 25px;
-  float: left;
+  height: 10px;
 }
 
 [data-block="25"] {
-  height: 25px;
+  width: 25px;
   background-color: blue;
 }
 
 [data-block="50"] {
-  height: 50px;
+  width: 50px;
   background-color: green;
 }
 
 [data-block="75"] {
-  height: 75px;
+  width: 75px;
   background-color: red;
 }
 
 [data-block="100"] {
-  height: 100px;
+  width: 100px;
   background-color: yellow;
+}
+
+button {
+  display: block;
+  margin: 10px 0 0 54px;
 }
 
 #announce-game-won {
