--- a/09week/towers-of-hanoi/style.css
+++ b/09week/towers-of-hanoi/style.css
@@ -1,38 +1,65 @@
 [data-stack] {
   display: flex;
   justify-content: flex-start;
+  flex-direction: column-reverse;
   align-items: center;
-  height: 101px;
+  width: 201px;
+  height: 400px;
   background-color: aliceblue;
-  margin: 25px;
+  margin: 25px; 
+
 }
 
 [data-block] {
-  width: 25px;
+  height: 25px;
   float: left;
 }
 
 [data-block="25"] {
-  height: 25px;
+  width: 25px;
   background-color: blue;
 }
 
 [data-block="50"] {
-  height: 50px;
+  width: 50px;
   background-color: green;
 }
 
 [data-block="75"] {
-  height: 75px;
+  width: 75px;
   background-color: red;
 }
 
 [data-block="100"] {
-  height: 100px;
+  width: 100px;
   background-color: yellow;
+}
+
+[data-block="125"]{
+  width: 125px;
+  background-color: purple;
+}
+
+[data-block="150"]{
+  width: 150px;
+  background-color: skyblue;
+}
+
+[data-block="175"]{
+  width: 175px;
+  background-color: orange
+}
+
+[data-block="200"]{
+  width: 200px;
+  background-color: blueviolet
 }
 
 #announce-game-won {
   font-size: 50px;
   text-align: center;
+}
+
+.container {
+  display: inline-flex;
 }
